Etapa 2/Compilador minijava - etapa 2/bin/tests/tests sintácticos/invalidos/test10.java
/* Test10
 * Objetivo: Detectar que falta la sentencia o bloque correspondiente al then.
 */
class clase
{
	dynamic boolean metodo()
	{
		if (true || false)
			
	}
	
}

